fix(layer-selector): prevent layer name from being truncated
I had some test users complain about this in enviro.

Ref: https://github.com/agrc/deq-enviro/issues/651

--- a/packages/layer-selector/src/LayerSelector.css
+++ b/packages/layer-selector/src/LayerSelector.css
@@ -6,7 +6,6 @@
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   font-size: 90%;
-  max-width: 100px;
   white-space: nowrap;
 }
 .layer-selector--item {
@@ -30,7 +29,6 @@
 .layer-selector {
   background: #fff;
   pointer-events: auto;
-  max-width: 150px;
 }
 .layer-selector--width {
   width: 8em;
